# AeroLab-CFD

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CFD_NOTES.md  LOCAL_SETUP.md  PARTICLE_TRACES.md  ROADMAP.md  USER_GUIDE.md
scripts/: aerolab_app.py
src/aerolab/: __init__.py  case.py  cli.py  openfoam.py  repair.py  report.py  solver.py  stl.py  webapp.py
src/aerolab/benchmarks/: __init__.py  runner.py
src/aerolab/benchmarks/cube-symmetry-v1/: body.stl  manifest.json
src/aerolab/solver/: __init__.py  analysis.py  backends.py  comparison.py  core.py  parsing.py  run.py  statistics.py  studies.py  util.py  visualization.py
src/aerolab/web/: app.js  index.html  style.css
templates/openfoam-external-flow/: README.md
tests/: test_benchmark.py  test_comparison.py  test_oil_flow.py  test_openfoam.py  test_repair.py  test_report.py  test_run_control.py  test_solver.py  test_statistics.py  test_studies.py  test_webapp.py
