[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aerolab-cfd"
version = "0.1.0"
description = "Local-first CFD workflow for checking external aerodynamics of 3D models."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "AeroLab" }
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
]

[project.scripts]
aerolab = "aerolab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aerolab = ["web/*", "web/vendor/*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# pyflakes (F), a focused pycodestyle subset (E4/E7/E9), import sorting (I),
# and safe pyupgrade rules (UP). Line length (E501) is intentionally not enforced.
select = ["E4", "E7", "E9", "F", "I", "UP"]
